Alignment of Content fixed

--- a/Dummy/HTMLStructure/Task2/assets/css/style.css
+++ b/Dummy/HTMLStructure/Task2/assets/css/style.css
@@ -104,6 +104,7 @@ ul {
 
 header {
   width: 100%;
+  height: 60px;
   position: fixed;
   background-color: #316974;
   opacity: 0.9;
@@ -113,7 +114,7 @@ header {
 header > .wrapper {
   width: 90%;
   margin: 0 5%;
-  padding: 20px 0;
+  padding: 18px 0;
 }
 
 h1 {
@@ -928,14 +929,13 @@ ul.transition-emergency {
     border-bottom: none;
   }
   ul.doctor-cards > li {
-    width: fit-content;
+    width: 46%;
     margin-right: 5%;
     margin-bottom: 30px;
   }
-  ul.doctor-cards > li:last-child {
-    margin-right: 5%;
+  ul.doctor-cards > li:nth-child(2n){
+    margin-right: 0;
   }
-
   ul.testimonial-list > li {
     width: 100%;
     margin-bottom: 30px;
@@ -1031,8 +1031,10 @@ ul.transition-emergency {
     margin-top: 30px;
     padding-top: 0;
   }
-  div.contact-form form input[type=submit]{
-    width: 30%;
+  ul.doctor-cards > li {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 30px;
   }
   section.banner-info > a {
     width: 80%;
